[package]
name = "tetsy-send-wrapper"
version = "0.1.0"
authors = ["Thomas Keh", "Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = """
This Rust library implements a wrapper type called SendWrapper which allows you to move around non-Send types
between threads, as long as you access the contained value only from within the original thread. You also have to
make sure that the wrapper is dropped from within the original thread. If any of these constraints is violated,
a panic occurs.
Forked from https://github.com/thk1/send_wrapper because it was unmaintained"""
license = "MIT/Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "send", "wrapper", "thread_local" ]
categories = [ "cryptography::cryptocurrencies", "rust-patterns" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-send-wrapper"
documentation = "https://docs.rs/tetsy-send-wrapper"
